Fix z-index header logo bug

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h1 {
   position: sticky;
   position: -webkit-sticky; /* Safari */
   height: 88px;
-  z-index: 100;
+  z-index: 42;
 }
 
 #header h1 {
@@ -76,7 +76,7 @@ h1 {
   height: 100%;
   width: 0;
   position: fixed;
-
+  z-index: 100;
   top: 0;
   right: 0;
   background-color: #111;
